# core

./: Cargo.toml
src/: config.rs  data.rs  errors.rs  lib.rs  prelude.rs  template.rs  utils.rs
src/models/: templates.rs
