[package]
name = "fll-scoring"
version = "0.1.0"
authors = ["Owen Salter <owen@devosmium.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "1.0.0" 
handlebars = "3.1.0"
bson = "1.0.0"
configparser = "0.7.1"
actix-web = "2.0"
derive_more = "0.99"
uuid = { version = "0.8", features = ["serde", "v4"] }