[package]
authors = ["Owen Salter <owen@devosmium.xyz>"]
edition = "2018"
name = "fll-scoring"
version = "0.1.0"

[dependencies]
actix-http = "2.0.0-beta.2"
actix-web = "2.0"
configparser = "0.7.1"
derive_more = "0.99"
handlebars = "3.1.0"
tera = "1"

serde = { version = "1", features = ["derive"]}
serde_json = "1"

[dependencies.sqlx]
features = ["postgres", "uuid", "chrono"]
version = "0.3"

[dependencies.uuid]
features = ["serde", "v4"]
version = "0.8" 
